--- a/personal.html
+++ b/personal.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <h2>Profile Photo:</h2>
-      <img src="developer.jpg" alt="profile" />
+      <img src="assets/developer.jpg" alt="profile" />
       <br />
       <caption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mohit Sharma</caption>
       <p><b>Mobile Number: </b>9900 8350 66</p>
