--- a/home.html
+++ b/home.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-</head>
-<body>
-    <h3>Profile</h3>
+  </head>
+  <body>
+    <h2>Professional Summery</h2>
     <ul>
-        <li>HTML5+CSS</li>
-        <li>JavaScript</li>
-        <li>Bootstrap</li>
-        <li>TypeScript</li>
-        <li>Angular</li>
+      <li type="square">
+        Having 1 years of experience in developing Single page Web Applications
+        using Angular 8, HTML5, CSS3, Bootstrap 5. JavaScript, TypeScript
+      </li>
+      <li type="square">
+        Experience on working with version control system - GIT and GitHub
+      </li>
+      <li type="square">
+        Experience working with JIRA for user stories and bug tracking
+      </li>
+      <li type="square">
+        Strong Debugging & Troubleshooting code experience using
+        Chrome Developer Tool
+      </li>
+      <li type="square">Working exposure on ID's like VS Code and Notepad++</li>
+      <li type="square">
+        Good working experience under Agile methodologies environment
+      </li>
+      <li type="square">
+        Experience in using Chrome Developer Tool for debugging and
+        Troubleshooting the code
+      </li>
+      <li type="square">Knowledge of NodeJS</li>
+      <li type="square">
+        Ability to work with people at all levels in the program
+      </li>
     </ul>
-</body>
+  </body>
 </html>
