--- a/personal.html
+++ b/personal.html
@@ -26,6 +26,23 @@
           <li>Mother name: Manika Sharma</li>
         </ul>
       </details>
+      <br>
+      <!--  Hobbies And Achievenments -->
+      <h2>Hobbies</h2>
+      <ul>
+        <li type="square">Reading</li>
+        <li type="square">Programming</li>
+        <li type="square">Playing Cricket</li>
+        <li type="square">Listening music</li>
+      </ul>
+      <br>
+      <h2>Achievenments</h2>
+      <ul>
+        <li type="square"><i><b>Being selected for an internship or job opportunity through the college.</b></i></li>
+        <li type="square">Maintaining a high GPA throughout the college career.</li>
+        <li type="square">Completing a challenging course or project with a good grade.</li>
+        <li type="square">Being on the Dean's List for outstanding academic performance.</li>
+      </ul>
     </div>
   </body>
 </html>
