--- a/index.html
+++ b/index.html
@@ -9,66 +9,36 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <style>
-      iframe {
-        height: 500px;
-        width: 900px;
-        border: 1px solid black;
-      }
-    </style>
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
     <header>
       <i class="fa fa-user" aria-hidden="true"></i
-      ><span>&nbsp;Mohit Sharma</span> &nbsp;&nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;&nbsp;<i
-        class="fa fa-phone-square"
-        aria-hidden="true"
-      ></i>
-      <span>8600555099</span>
+      ><span class="span-1">Mohit Sharma</span>
+      <i class="fa fa-phone-square" aria-hidden="true"></i>
+      <span class="span-2">8600555099</span>
 
-      &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-envelope" aria-hidden="true"></i>
-      <span>mohit@gmail.com</span>
-      
+      <i class="fa fa-envelope" aria-hidden="true"></i>
+      <span class="span-3">mohit@gmail.com</span>
     </header>
     <br />
     <nav>
-      <a href="home.html" target="frame">HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="webTable.html" target="frame">TECHOLOGY STACK</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="eduction.html" target="frame">EDUCATION</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="personal.html" target="frame">PERSONAL</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="contactus.html" target="frame" >CONTACT ME</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="home.html" target="frame">Home</a>
+      <a href="webTable.html" target="frame">techology stack</a>
+      <a href="eduction.html" target="frame"> education</a>
+      <a href="personal.html" target="frame">personal</a>
+      <a href="contactus.html" target="frame">contact me</a>
     </nav>
-    <br /><br>
+    <br /><br />
     <iframe name="frame"></iframe>
 
-    <table>
-      <thead>
-        <tr>
-          <th>Follow Me</th>
-          <th>
-            &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="#"
-              ><i class="fa fa-linkedin-square" aria-hidden="true"></i
-            ></a>
-          </th>
-          <th>
-            &nbsp;&nbsp;&nbsp;&nbsp;<a href="#"
-              ><i class="fa fa-google" aria-hidden="true"></i
-            ></a>
-          </th>
-          <th>
-            &nbsp;&nbsp;&nbsp;&nbsp;<a href="#"
-              ><i class="fa fa-instagram" aria-hidden="true"></i
-            ></a>
-          </th>
-          <th>
-            &nbsp;&nbsp;&nbsp;&nbsp;<a href="#"
-              ><i class="fa fa-facebook-official" aria-hidden="true"></i
-            ></a>
-          </th>
-        </tr>
-      </thead>
-    </table>
+    <br />
+    <footer>
+      <span class="follow">Follow Me</span>
+      <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+    </footer>
   </body>
 </html>
