--- a/eduction.html
+++ b/eduction.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css">
     <style>
-        table,th,tr,td{
-            border: 2px solid black;
-            border-collapse: collapse;
-        }
+      table,
+th,
+tr,
+td {
+  border: 2px solid black;
+  border-collapse: collapse;
+}
     </style>
 </head>
 <body>
-    <h3>My Educational Details</h3>
+    <h3 id="educ">My Educational Details</h3>
     <table>
       <thead>
         <tr>
