--- a/home.html
+++ b/home.html
@@ -5,36 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link rel="stylesheet" href="CSS/style.css" />
+    <!--  Google Font Family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h2>Professional Summery</h2>
+    <h2 class="head">Career Objectives</h2>
+    <p class="career">
+      TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP
+      ORGANIZATION GROWTH
+    </p>
+    <h2 class="head">Professional Summery</h2>
     <ul>
-      <li type="square">
+      <li type="circle">
         Having 1 years of experience in developing Single page Web Applications
-        using Angular 8, HTML5, CSS3, Bootstrap 5. JavaScript, TypeScript
+        using <span class="angular">Angular 8</span>, HTML5, CSS3, Bootstrap 5.
+        JavaScript, TypeScript
       </li>
-      <li type="square">
+      <li>
         Experience on working with version control system - GIT and GitHub
       </li>
-      <li type="square">
-        Experience working with JIRA for user stories and bug tracking
+      <li>Experience working with JIRA for user stories and bug tracking</li>
+      <li>
+        Strong Debugging & Troubleshooting code experience using Chrome
+        Developer Tool
       </li>
-      <li type="square">
-        Strong Debugging & Troubleshooting code experience using
-        Chrome Developer Tool
-      </li>
-      <li type="square">Working exposure on ID's like VS Code and Notepad++</li>
-      <li type="square">
-        Good working experience under Agile methodologies environment
-      </li>
-      <li type="square">
+      <li>Working exposure on ID's like VS Code and Notepad++</li>
+      <li>Good working experience under Agile methodologies environment</li>
+      <li>
         Experience in using Chrome Developer Tool for debugging and
         Troubleshooting the code
       </li>
-      <li type="square">Knowledge of NodeJS</li>
-      <li type="square">
-        Ability to work with people at all levels in the program
-      </li>
+      <li>Knowledge of NodeJS</li>
+      <li>Ability to work with people at all levels in the program</li>
     </ul>
   </body>
 </html>
