--- a/personal.html
+++ b/personal.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal</title>
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
     <div>
-      <h2>Profile Photo:</h2>
+      <h2 class="had">Profile Photo:</h2>
       <img src="assets/developer.jpg" alt="profile" />
-      <br />
-      <caption>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mohit Sharma</caption>
-      <p><b>Mobile Number: </b>9900 8350 66</p>
-      <p><b>Email: </b>  mohit@gmail.com</p>
-      <p><b>Date of Birth: </b> May-17-2001</p>
-      <p><b>Address </b> Om Colony, sangola</p>
+      <br>
+      <p class="ca">Mohit Sharma</p>
+      <p class="pe"><b>Mobile Number: </b>9900 8350 66</p>
+      <p class="pe"><b>Email: </b>  mohit@gmail.com</p>
+      <p class="pe"><b>Date of Birth: </b> May-17-2001</p>
+      <p class="pe"><b>Address </b> Om Colony, sangola</p>
 
       <details>
         <summary>
