--- a/webTable.html
+++ b/webTable.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Table</title>
+    <link rel="stylesheet" href="CSS/style.css">
     <style>
       table,
       tr,
@@ -15,24 +16,24 @@
     </style>
   </head>
   <body>
-    <h3>Technology Stack for Angular Web Development</h3>
+    <h3 id="educ">Technology Stack for Angular Web Development</h3>
     <table>
       <tbody>
         <tr>
-            <th>&nbsp;&nbsp;Technology</th>
+            <th class="te">Technology</th>
           <td>
-            <p>&nbsp;HTML5+CSS</p>
-            <p>&nbsp;JavaScript</p>
-            <p>&nbsp;Bootstrap</p>
-            <p>&nbsp;TypeScript</p>
-            <p>&nbsp;Angular</p>
+            <p class="p">HTML5+CSS</p>
+            <p class="p">JavaScript</p>
+            <p class="p">Bootstrap</p>
+            <p class="p">TypeScript</p>
+            <p class="p">Angular</p>
           </td>
         </tr>
         <tr>
-            <th>&nbsp;&nbsp;Technology</th>
+            <th class="te">Technology</th>
           <td>
-            <p>&nbsp;Agile+JIRA</p>
-            <p>&nbsp;GIT+GitHub</p>
+            <p class="p">Agile+JIRA</p>
+            <p class="p">GIT+GitHub</p>
           </td>
         </tr>
       </tbody>
